# e2e-ml-house-price-prediction

./: Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
artefacts/transformers/: data_transformer.joblib
prophet/: config.py  data.py  dataset_builder.py  evaluator.py  price_predictor.py  trainer.py
