[project]
name = "prophet"
version = "0.1.0"
description = "Airbnb Price Prediction using Deep Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.58.0",
    "fastapi>=0.115.6",
    "pandas>=2.2.3",
    "uvicorn>=0.34.0",
    "numpy>=2.0.0",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.2.2",
    "joblib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "fastparquet>=2024.11.0",
    "loguru>=0.7.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "pip-tools==7.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
packages = ["prophet"]